; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_xmlrpc.c_xml_element_to_XMLRPC_REQUEST.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xml_to_xmlrpc.c_xml_element_to_XMLRPC_REQUEST.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @xml_element_to_XMLRPC_REQUEST(i64 %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @xml_element_to_XMLRPC_REQUEST_worker(i64 %10, i32* null, i32* null, i32* %11)
  %13 = call i32* @XMLRPC_RequestSetData(i64 %9, i32 %12)
  store i32* %13, i32** %3, align 8
  br label %15

14:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %15

15:                                               ; preds = %14, %8
  %16 = load i32*, i32** %3, align 8
  ret i32* %16
}

declare dso_local i32* @XMLRPC_RequestSetData(i64, i32) #1

declare dso_local i32 @xml_element_to_XMLRPC_REQUEST_worker(i64, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
